Subsections added and duplicate code removed

--- a/vida.ipynb
+++ b/vida.ipynb
@@ -63,14 +63,25 @@
       },
       "cell_type": "code",
       "source": [
-        "# !wget -cq https://github.com/udacity/pytorch_challenge/raw/master/cat_to_name.json\n",
+        "!wget -cq https://github.com/udacity/pytorch_challenge/raw/master/cat_to_name.json\n",
         "\n",
-        "# !wget -cq https://s3.amazonaws.com/content.udacity-data.com/courses/nd188/flower_data.zip\n",
+        "!wget -cq https://s3.amazonaws.com/content.udacity-data.com/courses/nd188/flower_data.zip\n",
         "\n",
-        "# !unzip -qq flower_data.zip\n",
+        "!unzip -qq flower_data.zip\n",
         "\n",
-        "# !rm -f flower_data.zip || true\n",
-        "\n",
+        "!rm -f flower_data.zip || true"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "_76VJb_B86uf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "path_train = 'flower_data/train'\n",
         "\n",
         "path_validation = 'flower_data/valid'\n",
@@ -162,6 +173,16 @@
         "### Pre-processing <a name=\"pre-processing\"></a>\n",
         "\n",
         "The train dataset is loaded, resized, transformed to tensor and normalized; besides that, another transformations are applied to augment the dataset. The test dataset is a split of the validation dataset, 80% from the dataset is used to validation and 20% to test."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ZPgJoT_8sC0O",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#### Functions"
       ]
     },
     {
@@ -292,6 +313,26 @@
     },
     {
       "metadata": {
+        "id": "cQ0Dqu0IsIel",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#### Processing"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "lB1QLCQRwhrX",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### Train"
+      ]
+    },
+    {
+      "metadata": {
         "id": "vZQqq_F359zQ",
         "colab_type": "code",
         "colab": {}
@@ -366,7 +407,7 @@
         "train6 = load(path = path_train, transform = torchvision.transforms.Compose(_train6))\n",
         "\n",
         "# Concat\n",
-        "train_dataset = [\n",
+        "train_datasets = [\n",
         "    {'title': 'Original', 'data': train1},\n",
         "    {'title': 'Brightness', 'data': train3},\n",
         "    {'title': 'Crop', 'data': train4},\n",
@@ -375,7 +416,7 @@
         "    {'title': 'Flip Vertical', 'data': train6}\n",
         "]\n",
         "\n",
-        "for dataset in train_dataset:\n",
+        "for dataset in train_datasets:\n",
         "    dataset['data'] = torch.utils.data.DataLoader(\n",
         "        dataset['data'],\n",
         "        num_workers = num_workers_train,\n",
@@ -383,7 +424,7 @@
         "        shuffle = True,\n",
         "    )\n",
         "\n",
-        "print(reduce(lambda start, length: start + length, [len(dataset['data'].dataset) for dataset in train_dataset]))"
+        "print(reduce(lambda start, length: start + length, [len(dataset['data'].dataset) for dataset in train_datasets]))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -399,7 +440,7 @@
         "# Plot train\n",
         "%matplotlib inline\n",
         "\n",
-        "for dataset in train_dataset:\n",
+        "for dataset in train_datasets:\n",
         "    # Get batch\n",
         "    images_train, labels_train = iter(dataset['data']).next()\n",
         "    \n",
@@ -411,6 +452,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Z3tqJxoixL2x",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### Validation"
+      ]
     },
     {
       "metadata": {
@@ -492,6 +543,16 @@
     },
     {
       "metadata": {
+        "id": "1EwpwzxpxN_y",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### Test"
+      ]
+    },
+    {
+      "metadata": {
         "id": "r8YOsAHIMArk",
         "colab_type": "text"
       },
@@ -515,6 +576,184 @@
         "\n",
         "3. [Unsupervised representation learning using convolutional and stacked auto-encoders: a domain and cross-domain feature space analysis](https://arxiv.org/abs/1811.00473)"
       ]
+    },
+    {
+      "metadata": {
+        "id": "SvCtgY7JsPLJ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#### Functions"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Cii79QvEsR0U",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def train(model, datasets, criterion, optimizer):\n",
+        "    '''\n",
+        "        Train model\n",
+        "        \n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        \n",
+        "        model: torchvision.models\n",
+        "            Neural Network model to train\n",
+        "        \n",
+        "        datasets: list\n",
+        "            List of datasets to use as train\n",
+        "        \n",
+        "        criterion: torch.nn\n",
+        "            Loss function\n",
+        "        \n",
+        "        optimizer: torch.optim\n",
+        "            Gradient optimizer\n",
+        "\n",
+        "            \n",
+        "        Usage\n",
+        "        -----\n",
+        "        \n",
+        "        >>> train(\n",
+        "        >>>     torchvision.models.resnet18(),\n",
+        "        >>>     [],\n",
+        "        >>>     torch.nn.CrossEntropyLoss(),\n",
+        "        >>>     torch.optim.Adam(params = torchvision.models.resnet18().parameters(), lr = 0.001)\n",
+        "        >>> )\n",
+        "        \n",
+        "        Return\n",
+        "        ------\n",
+        "        \n",
+        "        List of loss during training\n",
+        "    '''\n",
+        "    \n",
+        "    _loss = []\n",
+        "    \n",
+        "    for dataset in datasets:\n",
+        "        for batch, (images, labels) in enumerate(dataset['data']):\n",
+        "            # Activate CUDA\n",
+        "            if torch.cuda.is_available():\n",
+        "                images, labels = images.cuda(), labels.cuda()\n",
+        "\n",
+        "            # Set the gradient to zero\n",
+        "            model.zero_grad()\n",
+        "            \n",
+        "            # Compute the output\n",
+        "            output = model(images)\n",
+        "            \n",
+        "            # Compute the loss\n",
+        "            loss = criterion(output, labels)\n",
+        "            \n",
+        "            _loss.append(loss)\n",
+        "            \n",
+        "            # Retro propagate\n",
+        "            loss.backward()\n",
+        "\n",
+        "            optimizer.step()\n",
+        "            \n",
+        "            # Print loss\n",
+        "            print('Batch {0} | Dataset {1}: {2} Loss'.format(batch, dataset['title'], loss))\n",
+        "            \n",
+        "            break\n",
+        "    \n",
+        "    return _loss"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "llOcaqoZ5V3K",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def accuracy(model, dataset, classes):\n",
+        "    '''\n",
+        "        Test accuracy\n",
+        "        \n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        \n",
+        "        model: torchvision.models\n",
+        "            Neural Network model to test\n",
+        "        \n",
+        "        dataset: torch.utils.data\n",
+        "            Data set of test\n",
+        "                \n",
+        "        classes: dict\n",
+        "            Meta data dict of classes\n",
+        "\n",
+        "            \n",
+        "        Usage\n",
+        "        -----\n",
+        "        \n",
+        "        >>> accuracy(\n",
+        "        >>>     torchvision.models.resnet18(),\n",
+        "        >>>     [],\n",
+        "        >>>     {},\n",
+        "        >>> )\n",
+        "        \n",
+        "        Return\n",
+        "        ------\n",
+        "        \n",
+        "        Correct predictions to each class, amount of objects in each class and samples\n",
+        "        \n",
+        "        Extra\n",
+        "        -----\n",
+        "        \n",
+        "        round(100. * np.sum(_correct) / np.sum(_total)), 2)\n",
+        "    '''\n",
+        "    \n",
+        "    _correct = [0.] * len(classes)\n",
+        "    \n",
+        "    _total = [0.] * len(classes)\n",
+        "    \n",
+        "    _sample = []\n",
+        "    \n",
+        "    # Disable gradient\n",
+        "    with torch.no_grad():\n",
+        "        # Disable normalize and dropout\n",
+        "        model.eval()\n",
+        "\n",
+        "        for batch, (images, labels) in enumerate(dataset):\n",
+        "            if torch.cuda.is_available():\n",
+        "                images, labels = images.cuda(), labels.cuda()\n",
+        "\n",
+        "            # Compute the output\n",
+        "            output = model(images)\n",
+        "\n",
+        "            # Get the max probabilities and its indices (classes)\n",
+        "            max_probability, prediction = torch.max(output, 1)    \n",
+        "            \n",
+        "            # Get sample\n",
+        "            _sample.append({'image': images[0], 'label': labels[0], 'predicted': prediction[0]})\n",
+        "            \n",
+        "            # Compare predictions and truth labels\n",
+        "            correct = prediction.eq(labels.data.view_as(prediction))\n",
+        "\n",
+        "            # Transform to 1D\n",
+        "            if torch.cuda.is_available():\n",
+        "                correct = np.squeeze(correct.cpu().numpy())\n",
+        "            else:\n",
+        "                correct = np.squeeze(correct.numpy())\n",
+        "            \n",
+        "            for _ in range(len(images)):\n",
+        "                label = labels.data[_]\n",
+        "\n",
+        "                _correct[label] += correct[_].item()\n",
+        "\n",
+        "                _total[label] += 1\n",
+        "            \n",
+        "        return _correct, _total, _sample"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -635,10 +874,7 @@
         "resnet18_criterion = torch.nn.CrossEntropyLoss()\n",
         "\n",
         "# Define optimizer\n",
-        "resnet18_optimizer = torch.optim.Adam(params = resnet18.parameters(), lr = 0.001)\n",
-        "\n",
-        "# Define epochs\n",
-        "resnet18_epochs = 1"
+        "resnet18_optimizer = torch.optim.Adam(params = resnet18.parameters(), lr = 0.001)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -654,33 +890,7 @@
         "# Train\n",
         "resnet18.train(mode = True)\n",
         "\n",
-        "resnet18_loss = []\n",
-        "\n",
-        "for dataset in train_dataset:\n",
-        "    for epoch in range(resnet18_epochs):\n",
-        "        for batch, (images, labels) in enumerate(dataset['data']):\n",
-        "            # Activate CUDA\n",
-        "            if torch.cuda.is_available():\n",
-        "                images, labels = images.cuda(), labels.cuda()\n",
-        "\n",
-        "            # Set the gradient to zero\n",
-        "            resnet18_optimizer.zero_grad()\n",
-        "            \n",
-        "            # Compute the output\n",
-        "            output = resnet18(images)\n",
-        "            \n",
-        "            # Compute the loss\n",
-        "            loss = resnet18_criterion(output, labels)\n",
-        "            \n",
-        "            resnet18_loss.append(loss)\n",
-        "            \n",
-        "            # Retro propagate\n",
-        "            loss.backward()\n",
-        "\n",
-        "            resnet18_optimizer.step()\n",
-        "            \n",
-        "            # Print loss\n",
-        "            print('Epoch {0} | Batch {1} | Dataset {2}: {3} Loss'.format(epoch, batch, dataset['title'], loss))"
+        "resnet18_loss = train(resnet18, train_datasets, resnet18_criterion, resnet18_optimizer)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -710,40 +920,7 @@
       "cell_type": "code",
       "source": [
         "# Accuracy\n",
-        "resnet18_class_correct = [0.] * len(classes)\n",
-        "\n",
-        "resnet18_class_total = [0.] * len(classes)\n",
-        "\n",
-        "# Disable gradient\n",
-        "with torch.no_grad():\n",
-        "    # Disable normalize and dropout\n",
-        "    resnet18.eval()\n",
-        "    \n",
-        "    for count, (images, labels) in enumerate(validation):\n",
-        "        if torch.cuda.is_available():\n",
-        "            images, labels = images.cuda(), labels.cuda()\n",
-        "        \n",
-        "        # Compute the output\n",
-        "        output = resnet18(images)\n",
-        "        \n",
-        "        # Get the max probabilities and its indices (classes)\n",
-        "        max_values, prediction = torch.max(output, 1)    \n",
-        "        \n",
-        "        # Compare predictions to true label\n",
-        "        correct = prediction.eq(labels.data.view_as(prediction))\n",
-        "        \n",
-        "        # Transform to 1D\n",
-        "        if torch.cuda.is_available():\n",
-        "            correct = np.squeeze(correct.cpu().numpy())\n",
-        "        else:\n",
-        "            correct = np.squeeze(correct.numpy())\n",
-        "        \n",
-        "        for c in range(len(images)):\n",
-        "            label = labels.data[c]\n",
-        "            \n",
-        "            resnet18_class_correct[label] += correct[c].item()\n",
-        "            \n",
-        "            resnet18_class_total[label] += 1"
+        "resnet18_class_correct, resnet18_class_total, resnet18_sample = accuracy(resnet18, validation, classes)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -873,33 +1050,7 @@
         "# Train\n",
         "vgg11.train(mode = True)\n",
         "\n",
-        "vgg11_loss = []\n",
-        "\n",
-        "for dataset in train_dataset:\n",
-        "    for epoch in range(vgg11_epochs):\n",
-        "        for batch, (images, labels) in enumerate(dataset['data']):\n",
-        "            # Activate CUDA\n",
-        "            if torch.cuda.is_available():\n",
-        "                images, labels = images.cuda(), labels.cuda()\n",
-        "\n",
-        "            # Set the gradient to zero\n",
-        "            vgg11_optimizer.zero_grad()\n",
-        "            \n",
-        "            # Compute the output\n",
-        "            output = vgg11(images)\n",
-        "            \n",
-        "            # Compute the loss\n",
-        "            loss = vgg11_criterion(output, labels)\n",
-        "            \n",
-        "            vgg11_loss.append(loss)\n",
-        "            \n",
-        "            # Retro propagate\n",
-        "            loss.backward()\n",
-        "\n",
-        "            vgg11_optimizer.step()\n",
-        "            \n",
-        "            # Print loss\n",
-        "            print('Epoch {0} | Batch {1} | Dataset {2}: {3} Loss'.format(epoch, batch, dataset['title'], loss))"
+        "vgg11_loss = train(vgg11, train_datasets, vgg11_criterion, vgg11_optimizer)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -929,40 +1080,7 @@
       "cell_type": "code",
       "source": [
         "# Accuracy\n",
-        "vgg11_class_correct = [0.] * len(classes)\n",
-        "\n",
-        "vgg11_class_total = [0.] * len(classes)\n",
-        "\n",
-        "# Disable gradient\n",
-        "with torch.no_grad():\n",
-        "    # Disable normalize and dropout\n",
-        "    vgg11.eval()\n",
-        "    \n",
-        "    for count, (images, labels) in enumerate(validation):\n",
-        "        if torch.cuda.is_available():\n",
-        "            images, labels = images.cuda(), labels.cuda()\n",
-        "        \n",
-        "        # Compute the output\n",
-        "        output = vgg11(images)\n",
-        "                \n",
-        "        # Get the max probabilities and its indices (classes)\n",
-        "        max_values, prediction = torch.max(output, 1)    \n",
-        "        \n",
-        "        # Compare predictions to true label\n",
-        "        correct = prediction.eq(labels.data.view_as(prediction))\n",
-        "        \n",
-        "        # Transform to 1D\n",
-        "        if torch.cuda.is_available():\n",
-        "            correct = np.squeeze(correct.cpu().numpy())\n",
-        "        else:\n",
-        "            correct = np.squeeze(correct.numpy())\n",
-        "        \n",
-        "        for c in range(len(images)):\n",
-        "            label = labels.data[c]\n",
-        "            \n",
-        "            vgg11_class_correct[label] += correct[c].item()\n",
-        "            \n",
-        "            vgg11_class_total[label] += 1"
+        "vgg11_class_correct, vgg11_class_total, vgg11_sample = accuracy(vgg11, validation, classes)"
       ],
       "execution_count": 0,
       "outputs": []
